[package]
name = "serif"
version = "0.1.5"
description = "An opinionated tracing-subscriber configuration with a focus on readability"
authors = ["Allen Wild <allenwild93@gmail.com>"]
license = "Apache-2.0"
homepage = "https://github.com/aswild/serif"
repository = "https://github.com/aswild/serif"
readme = "README.md"
keywords = ["logging", "tracing", "subscriber"]
categories = ["development-tools::debugging"]
edition = "2021"
# Don't treate the examples directory as examples for this package
autoexamples = false

[workspace]
# The example is a separate package/crate rather than being an "example" of the serif library
# itself so that this Cargo.toml isn't polluted with unnecessary optional dependencies.
# Run the example using "cargo run -p serif-examples"
members = [".", "examples"]

[dependencies]
is-terminal = "0.4"
jiff = "0.2"
# same library that tracing-subscriber uses, and it's more ergonomic than termcolor in this case
nu-ansi-term = "0.46"
# just used for re-exports
tracing = { version = "0.1.37", default-features = false, optional = true }
# actually used by serif
tracing-core = "0.1.30"
tracing-log = { version = "0.2.0", default-features = false }
tracing-subscriber = { version = "0.3.16", features = ["env-filter"] }

[features]
default = ["re-exports"]

# re-export tracing as serif::tracing, and tracing's event macros as serif::macros::*
# This is a convenience so that consumers don't need to separately include tracing in their
# Cargo.toml (unless additional tracing crate features are desired)
re-exports = ["dep:tracing"]
